week 2 more work done

--- a/week2/week2_more_python.ipynb
+++ b/week2/week2_more_python.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1068,25 +1068,52 @@
      "output_type": "stream",
      "text": [
       "Hello Ben\n",
-      "Marie-Antoinette is not as great as THE Marie-Antoinette\n",
-      "Macron is not as great as Marie-Antoinette\n"
+      "Chirac is not as great as Marie-Antoinette!\n",
+      "['Macron is not as great as Marie-Antoinette!', 'Louis XIV is not as great as Marie-Antoinette!', 'Marie-Antoinette is the best!', 'Napoleon is not as great as Marie-Antoinette!']\n",
+      "Macron is not as great as Marie-Antoinette!\n",
+      "Louis XIV is not as great as Marie-Antoinette!\n",
+      "Marie-Antoinette is the best!\n",
+      "Napoleon is not as great as Marie-Antoinette!\n"
      ]
     }
    ],
    "source": [
+    "# function prints result\n",
     "def sayHello(name):\n",
     "    print('Hello', name)\n",
     "\n",
     "sayHello('Ben')\n",
     "\n",
+    "\n",
+    "# function returns result, which can then be turned into a variable and used for further work (plus uses an if statement in it)\n",
     "def marie_antoinette(name):\n",
     "    if name == 'Marie-Antoinette':\n",
-    "        print(name, 'is not as great as THE Marie-Antoinette')\n",
+    "        response = f\"{name} is the best!\"\n",
     "    else: \n",
-    "        print(name, 'is not as great as Marie-Antoinette')\n",
+    "        response = f\"{name} is not as great as Marie-Antoinette!\"\n",
+    "    return response\n",
     "\n",
-    "marie_antoinette('Marie-Antoinette')\n",
-    "marie_antoinette('Macron')\n"
+    "name_comparison = marie_antoinette('Chirac')\n",
+    "print(name_comparison)\n",
+    "\n",
+    "\n",
+    "# function returns the results as a lits, which then later be turned into a variable and used for further work\n",
+    "def name_comparator_Marie_Antoinette(list_of_names):\n",
+    "    results = []\n",
+    "    for name in list_of_names:\n",
+    "        results.append(marie_antoinette(name))\n",
+    "    return results\n",
+    "    \n",
+    "names_compared = name_comparator_Marie_Antoinette(['Macron', 'Louis XIV', 'Marie-Antoinette', 'Napoleon'])\n",
+    "print(names_compared)\n",
+    "\n",
+    "\n",
+    "# function only prints it but does not return the results\n",
+    "def name_comparator_Marie_Antoinette(list_of_names):\n",
+    "    for name in list_of_names:\n",
+    "        print(marie_antoinette(name))\n",
+    "\n",
+    "name_comparator_Marie_Antoinette(['Macron', 'Louis XIV', 'Marie-Antoinette', 'Napoleon'])\n"
    ]
   },
   {
