week 2 homework part 2

--- a/week2/week2_more_python.ipynb
+++ b/week2/week2_more_python.ipynb
@@ -312,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'St Davids': 1841, 'St Asaph': 3355, 'Ripon': 16702, 'Truro': 18766}\n",
-      "{'St Davids': 1841, 'St Asaph': 3355, 'Ripon': 16702, 'Truro': 18766, 'City of London': 7375, 'Wells': 10536, 'Armagh': 14777}\n"
+      "{'St Davids': 1841, 'St Asaph': 3355, 'Ripon': 18766, 'Truro': 18766}\n",
+      "{'St Davids': 1841, 'St Asaph': 3355, 'Ripon': 18766, 'Truro': 18766, 'City of London': 7375, 'Wells': 10536, 'Armagh': 14777}\n"
      ]
     }
    ],
@@ -333,6 +333,7 @@
     "\n",
     "# update with a single item\n",
     "city_populations.update({\"Truro\": 18766})\n",
+    "city_populations.update({\"Ripon\": 18766})\n",
     "\n",
     "print(city_populations)\n",
     "\n",
@@ -1255,11 +1256,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'thin': 1, 'deep_pan': 0, 'gluten_free': 0},\n",
+       " {'pepperoni': 1,\n",
+       "  'olives': 0,\n",
+       "  'red_peppers': 1,\n",
+       "  'green_peppers': 0,\n",
+       "  'mushrooms': 2,\n",
+       "  'chicken': 0,\n",
+       "  'stilton': 0,\n",
+       "  'ricotta': 1,\n",
+       "  'pineapple': 1},\n",
+       " {'mozzarella': 0, 'dairy_free': 1})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "toppings = {\n",
     "    'pepperoni': 0,\n",
@@ -1283,15 +1305,36 @@
     "    'dairy_free': 0\n",
     "}\n",
     "\n",
-    "def orderPizza(baseType, *toppingTypes, cheeseType = 'mozzarella'):\n",
+    "def orderPizza(baseType, toppingTypes, cheeseType = 'mozzarella'):\n",
     "    global toppings, base, cheese\n",
     "    # this line is not necessary but it makes it clear that we are updating the global variables\n",
+    "    base[baseType] += 1\n",
+    "    # for key in base:\n",
+    "        # if baseType == 'thin': \n",
+    "       #     base.update({'thin': 1})\n",
+    "       # if baseType == 'deep_pan':\n",
+    "      #      base.update({'deep_pan': 1})\n",
+    "       # if baseType == 'gluten_free':\n",
+    "       #     base.update({'gluten_free': 1})\n",
+    "    for key in toppingTypes:\n",
+    "        if key not in toppings:\n",
+    "            toppings.update({key: 0})\n",
+    "        toppings[key] += 1\n",
+    "    for key in cheese:\n",
+    "        if cheeseType == 'dairy_free':\n",
+    "            cheese.update({'dairy_free': 1})\n",
+    "        else: \n",
+    "            cheese.update({'mozzarella': 1})\n",
+    "   # for key, value in toppings:\n",
+    "\n",
     "\n",
     "    # *toppingTypes is a tuple of all the toppings for the pizza\n",
     "    # default cheese type is mozzarella\n",
     "\n",
     "    # Now update the dictionaries toppings, base and cheese using arguments to orderPizza\n",
-    "    return\n"
+    "    return base, toppings, cheese\n",
+    "\n",
+    "orderPizza('thin', ('mushrooms', 'mushrooms', 'red_peppers', 'ricotta', 'pepperoni', 'pineapple'), 'dairy_free')\n"
    ]
   },
   {
@@ -1317,11 +1360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mrs J. Smith 3 Huntsmans Avenue Batley WF17 3RW',\n",
+       " 'Mr F. Jones 15a Brighton Road Wyke BD6 4NN',\n",
+       " 'Dr M. Tan 122 High Street Ilkley LS29 2AD']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mailingList = [\n",
     "    ['title', 'fname', 'sname', 'addr1', 'addr2', 'postcode'],\n",
@@ -1331,11 +1387,17 @@
     "]\n",
     "\n",
     "def prettyPrintAddressLabels(recipients):\n",
-    "    for i, record in enumerate(recipients):\n",
-    "    # format the entry\n",
+    "    addresses = []\n",
+    "    for i, record in enumerate(recipients):   \n",
+    "        if i == 0:\n",
+    "            continue \n",
+    "        #print(i, record)\n",
+    "        address = record[0] + ' ' + record[1][0] + '. ' + record[2] + ' ' + record[3] + ' ' + record[4] + ' ' + record[5]\n",
+    "        addresses.append(address)\n",
+    "\n",
     "\n",
     "    # return a list of formatted entries\n",
-    "    return\n",
+    "    return addresses\n",
     "\n",
     "prettyPrintAddressLabels(mailingList)\n"
    ]
