week 2 further work

--- a/week2/week2_more_python.ipynb
+++ b/week2/week2_more_python.ipynb
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
     "print(name_comparison)\n",
     "\n",
     "\n",
-    "# function returns the results as a lits, which then later be turned into a variable and used for further work\n",
+    "# function returns the results as a list, which then later be turned into a variable and used for further work\n",
     "def name_comparator_Marie_Antoinette(list_of_names):\n",
     "    results = []\n",
     "    for name in list_of_names:\n",
@@ -1115,6 +1115,57 @@
     "        print(marie_antoinette(name))\n",
     "\n",
     "name_comparator_Marie_Antoinette(['Macron', 'Louis XIV', 'Marie-Antoinette', 'Napoleon'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emmanuel Macron should not even appear in the same sentence as Marie-Antoinette!\n",
+      "Louis XIV is great, but just not as great as THE Marie-Antoinette!\n",
+      "Marie-Antoinette is the absolute best, greatest, most iconic, now and for ever!\n",
+      "Napoléon Bonaparte is great, but just not as great as THE Marie-Antoinette!\n",
+      "Elizabeth II is great, but just not as great as THE Marie-Antoinette!\n",
+      "Boris Johnson should not even appear in the same sentence as Marie-Antoinette!\n",
+      "Florian Payen is the biggest stan of Marie-Antoinette in the world!\n",
+      "Maria Antonia is the absolute best, greatest, most iconic, now and for ever!\n"
+     ]
+    }
+   ],
+   "source": [
+    "MARIE_ANTOINETTE_NAMES = ['Marie-Antoinette', 'Maria Antonia', 'Marie-Antoinette de Habsbourg-Lorraine']\n",
+    "AWFUL_NAMES = ['Boris Johnson', 'Emmanuel Macron', 'Rishi Sunak', \"Marine Le Pen\"]\n",
+    "MONARCH_NAMES = ['Louis XIV', 'Napoléon Bonaparte', 'Elizabeth II', 'Wilhelm II']\n",
+    "\n",
+    "\n",
+    "def marie_antoinette(name):\n",
+    "    if name in MARIE_ANTOINETTE_NAMES:\n",
+    "        response = f\"{name} is the absolute best, greatest, most iconic, now and for ever!\"\n",
+    "    elif name in AWFUL_NAMES:\n",
+    "        response = f\"{name} should not even appear in the same sentence as Marie-Antoinette!\"\n",
+    "    elif name in MONARCH_NAMES:\n",
+    "        response = f\"{name} is great, but just not as great as THE Marie-Antoinette!\"\n",
+    "    elif name == 'Florian Payen':\n",
+    "        response = f\"{name} is the biggest stan of Marie-Antoinette in the world!\"\n",
+    "    else: \n",
+    "        response = f\"Marie-Antoinette does not even think about {name}.\"\n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "def name_comparator_Marie_Antoinette(list_of_names):\n",
+    "    for name in list_of_names:\n",
+    "        print(marie_antoinette(name))\n",
+    "\n",
+    "\n",
+    "name_comparator_Marie_Antoinette([\n",
+    "    'Emmanuel Macron', 'Louis XIV', 'Marie-Antoinette', 'Napoléon Bonaparte', \n",
+    "    'Elizabeth II', 'Boris Johnson', 'Florian Payen', 'Maria Antonia'\n",
+    "    ])\n"
    ]
   },
   {
