--- a/week5/week5_json_and_requests.ipynb
+++ b/week5/week5_json_and_requests.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Load in the Python json library \n",
-    "import json"
+    "import json\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "        }\n",
     "        # Add more agricultural products as needed\n",
     "    ]\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Path to the JSON file\n",
-    "file_path = 'agricultural_products.json'"
+    "file_path = 'agricultural_products.json'\n"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "source": [
     "# Load data from the JSON file\n",
     "with open(file_path, 'r') as file:\n",
-    "    agricultural_data2 = json.load(file)"
+    "    agricultural_data2 = json.load(file)\n"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "agricultural_data\n",
     "# agricultural_data['products']\n",
     "# agricultural_data['products'][0]\n",
-    "# agricultural_data['products'][0]['name']"
+    "# agricultural_data['products'][0]['name']\n"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "agricultural_data\n",
     "\n",
     "\n",
-    "# dump again if neccessary "
+    "# dump again if neccessary \n"
    ]
   },
   {
@@ -314,7 +314,7 @@
     "file_path = 'farm_data.json'\n",
     "\n",
     "with open(file_path, 'w') as file:\n",
-    "    json.dump(farm_data, file, indent=2)"
+    "    json.dump(farm_data, file, indent=2)\n"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "source": [
     "# Read data from 'agricultural_products.json'\n",
     "with open('agricultural_products.json', 'r') as file:\n",
-    "    agricultural_data = json.load(file)"
+    "    agricultural_data = json.load(file)\n"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "source": [
     "# Read data from 'farm_data.json'\n",
     "with open('farm_data.json', 'r') as file:\n",
-    "    farm_data = json.load(file)"
+    "    farm_data = json.load(file)\n"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "outputs": [],
    "source": [
     "with open('merged_farm_data.json', 'w') as file:\n",
-    "    json.dump(farm_data, file, indent=2)"
+    "    json.dump(farm_data, file, indent=2)\n"
    ]
   },
   {
@@ -414,7 +414,7 @@
     }
    ],
    "source": [
-    "farm_data"
+    "farm_data\n"
    ]
   },
   {
@@ -513,7 +513,7 @@
     "\n",
     "#merged_data\n",
     "\n",
-    "# this doesn't work, why?"
+    "# this doesn't work, why?\n"
    ]
   },
   {
@@ -573,7 +573,7 @@
    "source": [
     "sunset_farms['farm2'] = sunset_farms['farm']\n",
     "sunset_farms.pop('farm')\n",
-    "#sunset_farms"
+    "#sunset_farms\n"
    ]
   },
   {
@@ -591,7 +591,7 @@
     "with open('farms.json', 'w') as file:\n",
     "    json.dump(merged_data, file, indent=2)\n",
     "    \n",
-    "#merged_data"
+    "#merged_data\n"
    ]
   },
   {
@@ -601,7 +601,7 @@
    "outputs": [],
    "source": [
     "merged_data = {'farms':[farm_data, sunset_farms]}\n",
-    "#merged_data"
+    "#merged_data\n"
    ]
   },
   {
@@ -620,7 +620,7 @@
    "source": [
     "# Load in required libraries\n",
     "import urllib\n",
-    "import json"
+    "import json\n"
    ]
   },
   {
@@ -655,7 +655,7 @@
     "        return response\n",
     "    else:\n",
     "        # Raise an error if there is a problem with the server\n",
-    "        raise urllib.error.HTTPError(\"Received an error from server, cannot retrieve results \" + str(webUrl.getcode()))"
+    "        raise urllib.error.HTTPError(\"Received an error from server, cannot retrieve results \" + str(webUrl.getcode()))\n"
    ]
   },
   {
@@ -691,7 +691,7 @@
     }
    ],
    "source": [
-    "earthquakes_response_raw = handle_url_response(earthquakes_live_feed_url)"
+    "earthquakes_response_raw = handle_url_response(earthquakes_live_feed_url)\n"
    ]
   },
   {
@@ -722,7 +722,7 @@
    ],
    "source": [
     "# Long JSON file\n",
-    "earthquakes_response_raw"
+    "earthquakes_response_raw\n"
    ]
   },
   {
@@ -731,7 +731,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "earthquakes_response_json = json.loads(earthquakes_response_raw)"
+    "earthquakes_response_json = json.loads(earthquakes_response_raw)\n"
    ]
   },
   {
@@ -1960,7 +1960,7 @@
     }
    ],
    "source": [
-    "earthquakes_response_json"
+    "earthquakes_response_json\n"
    ]
   },
   {
@@ -1986,7 +1986,7 @@
    "source": [
     "# output the number of events, plus the magnitude and each event name\n",
     "earthquake_count = earthquakes_response_json[\"metadata\"][\"count\"]\n",
-    "print(str(earthquake_count) + \" events recorded\")"
+    "print(str(earthquake_count) + \" events recorded\")\n"
    ]
   },
   {
@@ -2051,7 +2051,7 @@
    ],
    "source": [
     "for earthquake_event in earthquakes_response_json[\"features\"]:\n",
-    "    print(earthquake_event[\"properties\"][\"place\"])"
+    "    print(earthquake_event[\"properties\"][\"place\"])\n"
    ]
   },
   {
@@ -2140,7 +2140,7 @@
    ],
    "source": [
     "## check both lists are same length\n",
-    "len(earthquake_magnitudes), len(earthquake_locations)"
+    "len(earthquake_magnitudes), len(earthquake_locations)\n"
    ]
   },
   {
@@ -2166,7 +2166,7 @@
    ],
    "source": [
     "# look at first 5 values from each list\n",
-    "earthquake_locations[:5], earthquake_magnitudes[:5]"
+    "earthquake_locations[:5], earthquake_magnitudes[:5]\n"
    ]
   },
   {
@@ -2175,7 +2175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -2188,7 +2188,7 @@
     "mags_series = pd.Series(earthquake_magnitudes, name=\"Magnitude\")\n",
     "\n",
     "# Use the concatenate method to combine the two series\n",
-    "earthquakes_df = pd.concat([locs_series, mags_series], axis=1) "
+    "earthquakes_df = pd.concat([locs_series, mags_series], axis=1) \n"
    ]
   },
   {
@@ -2482,7 +2482,7 @@
     }
    ],
    "source": [
-    "earthquakes_df"
+    "earthquakes_df\n"
    ]
   },
   {
@@ -2498,7 +2498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# earthquakes_df.to_csv('???')"
+    "# earthquakes_df.to_csv('???')\n"
    ]
   },
   {
@@ -2584,7 +2584,7 @@
     "\n",
     "\n",
     "#transport['inputs'][0]['transport'][0]['value'] = transport['inputs'][0]['transport'][0]['distance'] * transport['inputs'][0]['value'] / 1000\n",
-    "#transport"
+    "#transport\n"
    ]
   },
   {
@@ -2598,6 +2598,131 @@
     "    \n",
     "## Task 3\n",
     "https://gitlab.com/hestia-earth/hestia-engine-models/-/issues/479"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'@type': 'Cycle',\n",
+       " 'duration': 365,\n",
+       " 'animals': {'@type': 'Animal',\n",
+       "  'term': {'@id': 'cattleLactatingDairyCows'},\n",
+       "  'value': 4},\n",
+       " 'products': [{'@type': 'Product',\n",
+       "   'term': {'@type': 'Term', '@id': 'milkCowRaw'},\n",
+       "   'value': 7000,\n",
+       "   'properties': {'@type': 'Property',\n",
+       "    'term': {'@id': 'lipidContent'},\n",
+       "    'value': 3.4}}],\n",
+       " 'practices': [{'@type': 'Practice',\n",
+       "   'term': {'@type': 'Term', '@id': 'milkYieldPerCowRaw'},\n",
+       "   'value': 4.794520547945205,\n",
+       "   'properties': {'@type': 'Property',\n",
+       "    'term': {'@type': 'Term', '@id': 'lipidContent'},\n",
+       "    'value': 3.4}}]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TASK 2\n",
+    "\n",
+    "total_milk_per_cycle = {\n",
+    "  \"@type\": \"Cycle\",\n",
+    "  \"duration\": 365,\n",
+    "  \"animals\": {\n",
+    "    \"@type\": \"Animal\",\n",
+    "    \"term\": {\n",
+    "      \"@id\": \"cattleLactatingDairyCows\"\n",
+    "    },\n",
+    "    \"value\": 4\n",
+    "  },\n",
+    "  \"products\": [\n",
+    "    {\n",
+    "      \"@type\": \"Product\",\n",
+    "      \"term\": {\n",
+    "        \"@type\": \"Term\",\n",
+    "        \"@id\": \"milkCowRaw\"\n",
+    "      },\n",
+    "      \"value\": 7000,\n",
+    "      \"properties\": {\n",
+    "        \"@type\": \"Property\", \n",
+    "        \"term\": {\n",
+    "          \"@id\": \"lipidContent\"\n",
+    "        },\n",
+    "        \"value\": 3.4\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "\n",
+    "result = {\n",
+    "  \"@type\": \"Animal\",\n",
+    "  \"term\": {\n",
+    "    \"@type\": \"Term\",\n",
+    "    \"@id\": \"cattleLactatingDairyCows\"\n",
+    "  },\n",
+    "  \"value\": 4, \n",
+    "  \"practices\": [\n",
+    "    {\n",
+    "      \"@type\": \"Practice\",\n",
+    "      \"term\": {\n",
+    "        \"@type\": \"Term\",\n",
+    "        \"@id\": \"milkYieldPerCowRaw\"\n",
+    "      },\n",
+    "      \"value\": 4.8,\n",
+    "      \"properties\": {\n",
+    "        \"@type\": \"Property\",\n",
+    "        \"term\": {\n",
+    "          \"@type\": \"Term\",\n",
+    "          \"@id\": \"lipidContent\"\n",
+    "        },\n",
+    "        \"value\": 3.4\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "\n",
+    "total_milk_per_cycle[\"products\"][0][\"value\"]\n",
+    "total_milk_per_cycle[\"duration\"]\n",
+    "total_milk_per_cycle[\"animals\"][\"value\"]\n",
+    "\n",
+    "def milk_yield_per_cow_per_day(x):\n",
+    "    product_value = total_milk_per_cycle[\"products\"][0][\"value\"]\n",
+    "    cycle_duration = total_milk_per_cycle[\"duration\"]\n",
+    "    animals_value = total_milk_per_cycle[\"animals\"][\"value\"]\n",
+    "    y = product_value / cycle_duration / animals_value\n",
+    "    x['practices'] = [\n",
+    "    {\n",
+    "      \"@type\": \"Practice\",\n",
+    "      \"term\": {\n",
+    "        \"@type\": \"Term\",\n",
+    "        \"@id\": \"milkYieldPerCowRaw\"\n",
+    "      },\n",
+    "      \"value\": y,\n",
+    "      \"properties\": {\n",
+    "        \"@type\": \"Property\",\n",
+    "        \"term\": {\n",
+    "          \"@type\": \"Term\",\n",
+    "          \"@id\": \"lipidContent\"\n",
+    "        },\n",
+    "        \"value\": 3.4\n",
+    "      }\n",
+    "    }\n",
+    "    ]\n",
+    "    return x\n",
+    "\n",
+    "# milk_yield_per_cow_per_day(total_milk_per_cycle)\n",
+    "total_milk_per_cycle = milk_yield_per_cow_per_day(total_milk_per_cycle)\n",
+    "total_milk_per_cycle\n"
    ]
   },
   {
@@ -2637,7 +2762,7 @@
     }
    ],
    "source": [
-    "!pip install beautifulsoup4"
+    "!pip install beautifulsoup4\n"
    ]
   },
   {
@@ -2649,7 +2774,7 @@
     "# Import required libraries\n",
     "import urllib\n",
     "import json\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n"
    ]
   },
   {
@@ -2699,7 +2824,7 @@
    ],
    "source": [
     "url = 'https://projectbritain.com/farming.html'  # Replace with the URL of the website you want to scrape\n",
-    "html_content = handle_url_response(url)"
+    "html_content = handle_url_response(url)\n"
    ]
   },
   {
@@ -3074,7 +3199,7 @@
     }
    ],
    "source": [
-    "soup"
+    "soup\n"
    ]
   },
   {
