--- a/week7/Week7.ipynb
+++ b/week7/Week7.ipynb
@@ -40,12 +40,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "same word, so not an anagram\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#def anagrams(s1, s2):\n",
-    "    "
+    "def anagrams(s1, s2):\n",
+    "    if s1.lower() != s2.lower():\n",
+    "        return sorted(s1.lower()) == sorted(s2.lower())\n",
+    "    else:\n",
+    "        print('same word, so not an anagram')\n",
+    "        return False\n",
+    "\n",
+    "    \n",
+    "anagrams('Seabird','seabird')\n",
+    "anagrams('tar', 'Rat')"
    ]
   },
   {
@@ -64,13 +90,13 @@
     "The following rules classify the strength of passwords:\n",
     "\n",
     "* A string is an ILLEGAL password if either:\n",
-    "  * it is an English word (as defined above)\n",
+    "  * if it is an english word\n",
     "  * it contains any invisible character (space, tab, newline)\n",
     "\n",
     "\n",
     "* A string is a WEAK password if it is **not** ILLEGAL and, either:\n",
     "  * it is _less than_ 8 characters long.\n",
-    "  * it is an English word followed by one or more decimal digit characters\n",
+    "  * english word followed by one or more decimal digit characters\n",
     "\n",
     "\n",
     "* A string is a STRONG password if it is **not** ILLEGAL and, either:\n",
@@ -113,37 +139,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def password_strength( password ):\n",
-    "    \n",
-    "    \n",
-    "    return strength\n",
-    "    # should return the strength (\"ILLEGAL\", WEAK\", \"STRONG\" or \"MEDIUM\")\n"
+    "def get_english_words():\n",
+    "    with open( \"english_words.txt\" ) as f:\n",
+    "         words = f.readlines()\n",
+    "    words = { word.strip() for\n",
+    "             word in words }\n",
+    "    return words\n",
+    "\n",
+    "ENGLISH_WORDS = get_english_words()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n",
+      " \n",
+      "invalid\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = 'hello '\n",
+    "if password.lower() in ENGLISH_WORDS:\n",
+    "    print('yes')\n",
+    "\n",
+    "for character in password:\n",
+    "    print(character)\n",
+    "    if character in '\\n\\t\\r ':\n",
+    "        print('invalid')\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' ' in 'hello'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellooooopassword\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'MEDIUM'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def password_strength( password ):\n",
+    "    global ENGLISH_WORDS\n",
+    "    # A string is an ILLEGAL password if either:\n",
+    "    # if it contains an english word in it\n",
+    "    # it contains any invisible character (space, tab, newline)\n",
+    "    strength = 'MEDIUM'\n",
+    "    if password.lower() in ENGLISH_WORDS:\n",
+    "        strength = \"ILLEGAL\"\n",
+    "    for character in password.lower():\n",
+    "        if character in '\\n\\t\\r ':\n",
+    "            strength = \"ILLEGAL\"\n",
+    "    if strength == \"ILLEGAL\":\n",
+    "        return strength \n",
+    "\n",
+    "    # A string is a WEAK password if it is not ILLEGAL and, either:\n",
+    "    # it is less than 8 characters long.\n",
+    "    # it has an English word longer than 3 characters in it\n",
+    "    # english word followed by one or more decimal digit characters\n",
+    "    if len(password) < 8:\n",
+    "        strength = 'WEAK'\n",
+    "    for idx, character in enumerate(password.lower()):\n",
+    "        if character in '0123456789':\n",
+    "            if password[:idx].lower() in ENGLISH_WORDS:\n",
+    "                strength = 'WEAK'\n",
+    "    if strength == \"WEAK\":\n",
+    "        return strength \n",
+    "    \n",
+    "    # A string is a STRONG password if it is not ILLEGAL and, either:\n",
+    "    # it contains at least 12 characters\n",
+    "    # AND it contains at least 1 lower case letter\n",
+    "    # AND it contains at least 1 capital letter\n",
+    "    # AND it contains at least 1 numerical digit\n",
+    "    # AND it contains at least 1 special character (any visible ASCII character that is not a letter or a number)\n",
+    "    \n",
+    "    length, lower, upper, digit, special = False, False, False, False, False\n",
+    "    if len(password) >= 12:\n",
+    "        length = True\n",
+    "    for idx, character in enumerate(password):\n",
+    "        if character == character.lower():\n",
+    "            lower = True\n",
+    "        if character == character.upper():\n",
+    "            upper = True\n",
+    "        if character in '0123456789':\n",
+    "            digit = True\n",
+    "        if character in \"~`!@#$%^&*(){}[]|\\/:;\";<>.?\":\n",
+    "            special = True\n",
+    "        \n",
+    "    if length + lower + upper + digit + special == 5:\n",
+    "        strength = 'STRONG'\n",
+    "        \n",
+    "    return strength\n",
+    "    # should return the strength (\"ILLEGAL\", WEAK\", \"STRONG\" or \"MEDIUM\")\n",
+    "password_strength('password1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True + True"
+   ]
   },
   {
    "cell_type": "code",
