--- a/Bumblekite2024_tutorial_1_participants_version.ipynb
+++ b/Bumblekite2024_tutorial_1_participants_version.ipynb
@@ -835,10 +835,10 @@
       "id": "63696c39-2cf1-433e-a308-3c31195fde23",
       "metadata": {
         "id": "63696c39-2cf1-433e-a308-3c31195fde23",
-        "outputId": "7421d05d-4707-461f-c02d-b368d2c6b6c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7421d05d-4707-461f-c02d-b368d2c6b6c7"
       },
       "outputs": [
         {
@@ -1120,7 +1120,6 @@
       "id": "4b99c7aa-54a0-4975-9fa3-3deff2f64d56",
       "metadata": {
         "id": "4b99c7aa-54a0-4975-9fa3-3deff2f64d56",
-        "outputId": "df78dcff-5596-436e-ce64-e64c981c8ba0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 113,
@@ -1159,7 +1158,8 @@
             "913b9dae3b954df28f4b6a9883722cc2",
             "f998fe520152410da33c436fb0bea591"
           ]
-        }
+        },
+        "outputId": "df78dcff-5596-436e-ce64-e64c981c8ba0"
       },
       "outputs": [
         {
@@ -1278,8 +1278,6 @@
         "profile.to_file(\"/content/data_train_copy_report.html\")\n"
       ],
       "metadata": {
-        "id": "J1u9BU_Fm9WR",
-        "outputId": "d3addae6-7918-4d7b-8500-550f35e8ef16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -1296,7 +1294,9 @@
             "fba3a84a11f24941be0b503872b44da5",
             "240de3552ca54ff9bf226c4ba8d61a2a"
           ]
-        }
+        },
+        "id": "J1u9BU_Fm9WR",
+        "outputId": "d3addae6-7918-4d7b-8500-550f35e8ef16"
       },
       "id": "J1u9BU_Fm9WR",
       "execution_count": 47,
@@ -1336,12 +1336,12 @@
         "df_filtered[df_filtered[\"admission_age\"] < 0]"
       ],
       "metadata": {
-        "id": "j0_oqFd-oJj8",
-        "outputId": "9042738e-1795-408c-ab51-e62da006656a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 99
-        }
+        },
+        "id": "j0_oqFd-oJj8",
+        "outputId": "9042738e-1795-408c-ab51-e62da006656a"
       },
       "id": "j0_oqFd-oJj8",
       "execution_count": 53,
@@ -2796,11 +2796,11 @@
         "print(data_train_dropped.columns)\n"
       ],
       "metadata": {
-        "id": "5YKo99cntxzo",
-        "outputId": "85f5fd35-f8e0-473c-9605-6bbb4645e01d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5YKo99cntxzo",
+        "outputId": "85f5fd35-f8e0-473c-9605-6bbb4645e01d"
       },
       "id": "5YKo99cntxzo",
       "execution_count": 75,
@@ -2862,7 +2862,22 @@
         "def impute_by_race(df, continuous_vars, categorical_vars):\n",
         "\n",
         "    # Please add your code here ...\n",
+        "    # Initialize an empty dictionary to store the imputed values\n",
+        "    impute_values = {\n",
+        "        'continuous': {},\n",
+        "        'categorical': {}\n",
+        "    }\n",
+        "    for var in continuous_vars:\n",
+        "        # Calculate the median value for each race/ethnicity group\n",
+        "        median_values = df.groupby('race_ethnicity')[var].median()\n",
+        "        # Store the imputed median values in the dictionary\n",
+        "        impute_values['continuous'][var] = median_values\n",
         "\n",
+        "    for var in categorical_vars:\n",
+        "        # Calculate the mode value for each race/ethnicity group\n",
+        "        mode_values = df.groupby('race_ethnicity')[var].agg(pd.Series.mode)\n",
+        "        # Store the imputed mode values in the dictionary\n",
+        "        impute_values['categorical'][var] = mode_values\n",
         "\n",
         "\n",
         "    # Return the dataframe with imputed values and the dictionary of imputed values\n",
